Changes in version 0.?.?
------------------------

* Added a second parameter to the FitnessEvaluator interface to enable fitness
  calculations to take into account an individual's environment (the remainder
  of the population) when assigning a score.

* Minor tweak to improve the distribution of fitness evaluations between
  threads on multi-processor machines.


Changes in version 0.4.1
------------------------

* Added new constructors to NumberGenerator implementations to enable the
  parameters to be dynamic.

* Several more unit tests for significantly improved coverage.  Fixed 2 minor
  bugs detected by these new tests.

* Added some GUI control components to assist in building Swing GUIs for
  evolutionary programs.

* Moved the SwingConsole class into the new Swing components package
  (org.uncommons.watchmaker.swing) so that the core framework does not contain
  any dependencies on a particular presentation layer.

* Added evolutionary Sudoku solver example application.

* Included source code for the examples in the release archives.


Changes in version 0.4.0
------------------------

* Introduced framework support for interactive evolutionary algorithms.

* New example application based on Richard Dawkins' biomorph experiment.
  Demonstrates the new interactive features of the framework.

* Added new, extremely fast RNG - a Java port of Tony Pasqualoni's cellular
  automaton RNG (http://home.southernct.edu/~pasqualonia1/ca/report.html).

* Added ordered cross-over evolutionary operator for lists.

* Updated Travelling Salesman applet to optionally use cross-over as well as
  mutation.

* Introduced TerminationCondition interface and useful default implementations.
  Changed evolve methods in EvolutionEngine to take one or more conditions
  instead of explicitly specifying parameters such as number of generations,
  target fitness and timeout.


Changes in version 0.3.0
------------------------
