@@ -173,9 +173,17 @@ public class InteractiveSelection<T> implements SelectionStrategy<T>
         }
         catch (InvocationTargetException ex)
         {
-            // The select method is not declared to throw any exceptions so the
-            // worst that can happen is a RuntimeException - we can re-throw that.
-            throw (RuntimeException) ex.getCause();
+            // The select method is not declared to throw any checked exceptions so
+            // the worst that can happen is a RuntimeException or an Error (we can,
+            // and shoud, re-throw both).
+            if (ex.getCause() instanceof Error)
+            {
+                throw (Error) ex.getCause();
+            }
+            else
+            {
+                throw (RuntimeException) ex.getCause();
+            }
         }
     }
 
