@@ -8,6 +8,9 @@ Changes in version 0.?.?
 * Minor tweak to improve the distribution of fitness evaluations between
   threads on multi-processor machines.
 
+* Fix for ISSUE#3 (bad Throwable handling in InteractiveSelection and
+  RendererAdapter)
+
 
 Changes in version 0.4.1
 ------------------------
